fix wrong padding on tag page headers

--- a/src/_css/06.components/tag__header.css
+++ b/src/_css/06.components/tag__header.css
@@ -13,9 +13,9 @@
 	.tag-metadata {
 		position: relative;
 		z-index: 10;
-		padding: 0 var(--padding__medium);
+		margin: 0 auto;
 		width: 100%;
-		max-width: var(--max-width__content);
+		max-width: min(var(--max-width__content), calc(100% - var(--margin__medium) * 2));
 
 		:last-child {
 			margin-bottom: 0;
